--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,5 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\akhsy\\AppData\\Roaming\\NetBeans\\18\\build.properties
+project.kasirJARD=C:\\Users\\hp\\OneDrive\\Documents\\GitHub\\Pasar_JARD
+user.properties.file=C:\\Users\\hp\\AppData\\Roaming\\NetBeans\\20\\build.properties
